--- a/package.json
+++ b/package.json
@@ -6,10 +6,33 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@react-icons/all-files": "^4.1.0",
+    "antd": "^5.2.2",
+    "axios": "^1.3.4",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "flatlist-react": "^1.5.9",
+    "is-online": "^10.0.0",
+    "moment": "^2.29.4",
+    "radium": "^0.26.2",
+    "react": "17.0.2",
+    "react-calendar": "^4.0.0",
+    "react-dom": "17.0.2",
+    "react-highlight-words": "^0.20.0",
+    "react-icons": "4.2.0",
+    "react-pro-sidebar": "0.6.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "^5.0.1",
+    "react-switch": "6.0.0",
+    "react-use-websocket": "^3.0.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "rsuite": "^5.28.0",
+    "sass": "^1.58.3"
   },
   "scripts": {
     "start": "react-scripts start",
